Extend device metrics with Packet Success Rate & Tx ACK
